# python-playwright

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
tests/: basic_playwright_test.py  test_basic_playwright.py
