[tool.poetry]
name = "python-playwright"
version = "0.1.0"
description = "Demo project to learn Playwright with Python"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.2.0"
pytest-playwright = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
